--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,7 @@ jobs:
     name: Build
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=64cpu-linux-arm64
-      - image=ubuntu24-full-arm64
+      - runner=test-64cpu-arm64
       - extras=s3-cache
     steps:
       - uses: runs-on/action@v1
