--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -81,12 +81,12 @@ jobs:
       - name: Run ${{ matrix.extension.name }} circuit crate tests
         working-directory: extensions/${{ matrix.extension.path }}/circuit
         run: |
-          if [[ "${{ matrix.extension.name }}" == "algebra" && ${{ matrix.platform.runner }} == "test-gpu-nvidia" ]]; then
-            echo "TODO[stephenh]: Re-enable this once algebra issue is resolved"
-          else
-            ${{ env.CIRCUIT_TEST_ENV }} cargo nextest run ${{ env.CIRCUIT_TEST_FILTER }} --cargo-profile=fast ${{ env.FEATURE_ARGS }} --test-threads=32 --no-tests=pass
+          TEST_THREADS="--test-threads=32"
+          if [[ "${{ matrix.extension.name }}" != "algebra" || ${{ matrix.platform.runner }} != "test-gpu-nvidia" ]]; then
+            TEST_THREADS="--test-threads=4"
           fi
-          
+          ${{ env.CIRCUIT_TEST_ENV }} cargo nextest run ${{ env.CIRCUIT_TEST_FILTER }} --cargo-profile=fast ${{ env.FEATURE_ARGS }} $TEST_THREADS --no-tests=pass
+
         # We only need to run guest crate tests on CPU since we are not testing prover functionality
       - name: Run ${{ matrix.extension.name }} guest crate tests
         if: ${{ !contains(matrix.platform.runner, 'gpu') && hashFiles(format('extensions/{0}/guest', matrix.extension.path)) != '' }}
@@ -103,4 +103,8 @@ jobs:
         working-directory: extensions/${{ matrix.extension.path }}/tests
         run: |
           rustup component add rust-src --toolchain nightly-2025-02-14
-          cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} --profile=heavy --no-tests=pass
+          if [[ "${{ matrix.extension.name }}" == "algebra" && ${{ matrix.platform.runner }} == "test-gpu-nvidia" ]]; then
+            echo "TODO[stephenh]: Re-enable this once algebra issue is resolved"
+          else
+            cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} --profile=heavy --no-tests=pass
+          fi
