--- a/.github/workflows/guest-lib-tests.yml
+++ b/.github/workflows/guest-lib-tests.yml
@@ -38,7 +38,7 @@ jobs:
           - { name: "verify_stark", path: "verify_stark" }
         platform:
           - { runner: "test-64cpu-arm64" }
-          - { runner: "test-gpu-nvidia" }
+          # - { runner: "test-gpu-nvidia" }
       # Ensure tests run in parallel even if one fails
       fail-fast: false
 
