--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -7,257 +7,181 @@ on:
         type: string
         required: true
         description: The name of the benchmark to run
-      runner:
-        type: string
-        required: false
-        description: Runner config as JSON, use bench-gpu-nvidia for GPU
-        default: test-64cpu-arm64
-      memory_allocator:
-        type: string
-        required: false
-        description: Memory allocator to use (mimalloc or jemalloc)
-        default: jemalloc
-      app_log_blowup:
-        type: number
-        required: false
-        description: Application level log blowup
-        default: 2
-      leaf_log_blowup:
-        type: number
-        required: false
-        description: Aggregation (leaf) level log blowup
-        default: 2
-      root_log_blowup:
-        type: number
-        required: false
-        description: Root level log blowup (only for e2e)
-        default: 2
-      internal_log_blowup:
-        type: number
-        required: false
-        description: Internal level log blowup (only for e2e)
-        default: 2
-      max_segment_length:
-        type: number
-        required: false
-        description: Max segment length for continuations, must be larger than 524288
-        default: 1048476
-      e2e_bench:
-        type: boolean
-        required: true
-        description: Whether to run the e2e benchmark
-      features:
-        type: string
-        required: false
-        description: Host features, comma separated (aggregation,perf-metrics)
-  workflow_call:
-    inputs:
-      benchmark_name:
-        type: string
-        required: true
-        description: The name of the benchmark to run
-      benchmark_id:
-        type: string
-        required: true
-        description: The id of the benchmark to run, must be unique within matrix
-      runner:
-        type: string
-        required: false
-        description: Runner config as JSON, use bench-gpu-nvidia for GPU
-        default: test-64cpu-arm64
-      memory_allocator:
-        type: string
-        required: false
-        description: Memory allocator to use (mimalloc or jemalloc)
-        default: jemalloc
-      app_log_blowup:
-        type: number
-        required: false
-        description: Application level log blowup
-        default: 2
-      leaf_log_blowup:
-        type: number
-        required: false
-        description: Aggregation (leaf) level log blowup
-        default: 2
-      root_log_blowup:
-        type: number
-        required: false
-        description: Root level log blowup (only for e2e)
-        default: 2
-      internal_log_blowup:
-        type: number
-        required: false
-        description: Internal level log blowup (only for e2e)
-        default: 2
-      max_segment_length:
-        type: number
-        required: false
-        description: Max segment length for continuations, must be larger than 524288
-        default: 1048476
-      e2e_bench:
-        type: boolean
-        required: true
-        description: Whether to run the e2e benchmark
-      features:
-        type: string
-        required: false
-        description: Host features, comma separated (aggregation,perf-metrics)
 
 env:
-  S3_METRICS_PATH: s3://openvm-public-data-sandbox-us-east-1/benchmark/github/metrics
-  S3_FLAMEGRAPHS_PATH: s3://openvm-public-data-sandbox-us-east-1/benchmark/github/flamegraphs
-  FEATURE_FLAGS: "metrics,parallel,nightly-features"
-  INPUT_ARGS: ""
-  CARGO_NET_GIT_FETCH_WITH_CLI: "true"
+  # S3_METRICS_PATH: s3://openvm-public-data-sandbox-us-east-1/benchmark/github/metrics
+  # S3_FLAMEGRAPHS_PATH: s3://openvm-public-data-sandbox-us-east-1/benchmark/github/flamegraphs
+  # FEATURE_FLAGS: "metrics,parallel,nightly-features"
+  # INPUT_ARGS: ""
+  # CARGO_NET_GIT_FETCH_WITH_CLI: "true"
+  CARGO_TERM_COLOR: always
+  OPENVM_FAST_TEST: "1"
 
-permissions:
-  contents: write
+# permissions:
+#   contents: write
 
 jobs:
-  bench-new:
-    name: Run benchmark on workflow ref/branch
+  build:
     runs-on:
-      - runs-on
-      - runner=${{ inputs.runner }}
-      - run-id=${{ github.run_id }}
-      - tag=bench-${{ inputs.benchmark_name }}-${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
+      - runs-on=${{ github.run_id }}
+      - runner=test-gpu-nvidia
       - extras=s3-cache
-    steps:
-      - uses: runs-on/action@v1
-      ##########################################################################
-      # Environment setup                                                      #
-      ##########################################################################
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
+    continue-on-error: true
 
+    steps:
+      - uses: runs-on/action@v2
+      - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
+      - uses: taiki-e/install-action@nextest
 
-      - name: Install architecture specific tools
+      - name: Check CUDA status and set environment variables
         run: |
-          source ci/scripts/utils.sh
-          install_s5cmd
+          nvcc --version
 
-      - name: Display workflow inputs
-        run: echo "${{ toJSON(inputs) }}"
-      - name: "Feature flags: memory allocator"
+      - name: Run tests for primitives
+        working-directory: crates/circuits/primitives
         run: |
-          ALLOCATOR=${{ inputs.memory_allocator || github.event.inputs.memory_allocator }}
-          echo "FEATURE_FLAGS=$ALLOCATOR,${FEATURE_FLAGS}" >> $GITHUB_ENV
-      - name: "Feature flags: aggregation"
-        if: contains(github.event.pull_request.labels.*.name, 'run-benchmark') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --features parallel,cuda,touchemall
+
+      - name: Run tests for poseidon2-air
+        working-directory: crates/circuits/poseidon2-air
         run: |
-          echo "Adding aggregation feature flag"
-          echo "FEATURE_FLAGS=${FEATURE_FLAGS},aggregation" >> $GITHUB_ENV
-      - name: "Feature flags: workflow"
-        if: inputs.features || github.event.inputs.features
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --features parallel,cuda,touchemall
+
+      - name: Run rv32im circuit crate tests
+        working-directory: extensions/rv32im/circuit
         run: |
-          EXTRA_FEATURES=${{ inputs.features || github.event.inputs.features }}
-          echo "FEATURE_FLAGS=${FEATURE_FLAGS},$EXTRA_FEATURES" >> $GITHUB_ENV
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=32 --no-tests=pass
 
-      - name: Setup e2e (halo2 and arguments)
+      - name: Run rv32im integration tests
+        working-directory: extensions/rv32im/tests
         run: |
-          E2E_BENCH=${{ inputs.e2e_bench }}
-          echo "E2E_BENCH=${E2E_BENCH}" >> $GITHUB_ENV
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda --profile=heavy --no-tests=pass
 
-          if [[ "${E2E_BENCH}" == "true" ]]; then
-            ROOT_ARG="--root_log_blowup ${{ inputs.root_log_blowup }}"
-            INTERNAL_ARG="--internal_log_blowup ${{ inputs.internal_log_blowup }}"
-            bash ./extensions/native/recursion/trusted_setup_s3.sh
-            PARAMS_DIR=$HOME/.openvm/params
-            PARAMS_ARG="--kzg-params-dir $PARAMS_DIR"
-            echo "INPUT_ARGS=${ROOT_ARG} ${INTERNAL_ARG} ${PARAMS_ARG} ${INPUT_ARGS}" >> $GITHUB_ENV
-          fi
-
-      - name: Set BIN_NAME
+      - name: Run native circuit crate tests
+        working-directory: extensions/native/circuit
         run: |
-          echo "BIN_NAME=${{ inputs.benchmark_name }}" >> $GITHUB_ENV
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=32 --no-tests=pass
 
-      - name: Set working directory
-        id: set-working-dir
+      - name: Run native integration tests
+        working-directory: extensions/native/tests
         run: |
-          WORKING_DIR=$(jq -r --arg id "${{ inputs.benchmark_id }}" '
-            .benchmarks[] |
-            select(.id == $id) |
-            .working_directory
-          ' ./ci/benchmark-config.json)
-          RELATIVE_PATH=$(python3 -c "import os.path; print(os.path.relpath('.', '$WORKING_DIR'))")
-          echo "working_dir=$WORKING_DIR" >> $GITHUB_OUTPUT
-          echo "relative_path=$RELATIVE_PATH" >> $GITHUB_OUTPUT
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda --profile=heavy --no-tests=pass
 
-      # Metric name is unique within a run (matrix)
-      # When uploading to S3, use ${METRIC_NAME}-${current_sha}.[md/json]
-      - name: Set metric name
+      - name: Run keccak256 circuit crate tests
+        working-directory: extensions/keccak256/circuit
         run: |
-          METRIC_NAME=${{ inputs.benchmark_id || inputs.benchmark_name }}
-          echo "METRIC_NAME=${METRIC_NAME}" >> $GITHUB_ENV
-          METRIC_PATH=".bench_metrics/${METRIC_NAME}.json"
-          echo "METRIC_PATH=${METRIC_PATH}" >> $GITHUB_ENV
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=32 --no-tests=pass
 
-      - name: Set input args
+      - name: Run keccak256 integration tests
+        working-directory: extensions/keccak256/tests
         run: |
-          FEATURES="--features $FEATURE_FLAGS"
-          APP_ARG="--app_log_blowup ${{ inputs.app_log_blowup }}"
-          AGG_ARG="--leaf_log_blowup ${{ inputs.leaf_log_blowup }}"
-          MAX_SEGMENT_LENGTH="--max_segment_length ${{ inputs.max_segment_length }}"
-          OUTPUT_PATH="--output_path $(pwd)/$METRIC_PATH"
-          echo "INPUT_ARGS=${FEATURES} ${APP_ARG} ${AGG_ARG} ${MAX_SEGMENT_LENGTH} ${OUTPUT_PATH} ${INPUT_ARGS}" >> $GITHUB_ENV
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda --profile=heavy --no-tests=pass
 
-      ##########################################################################
-      # Find working directory based on benchmark_name and run the benchmark   #
-      ##########################################################################
-      - name: Run benchmark
-        working-directory: ${{ steps.set-working-dir.outputs.working_dir }}
+      - name: Run sha256 circuit crate tests
+        working-directory: extensions/sha256/circuit
         run: |
-          export JEMALLOC_SYS_WITH_MALLOC_CONF="retain:true,background_thread:true,metadata_thp:always,thp:always,dirty_decay_ms:-1,muzzy_decay_ms:-1,abort_conf:true"
-          python3 ${{ steps.set-working-dir.outputs.relative_path }}/ci/scripts/bench.py $BIN_NAME $INPUT_ARGS
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=32 --no-tests=pass
 
-      ##########################################################################
-      # Store metric json file to S3                                           #
-      ##########################################################################
-      - name: Upload metric json and compute diff with previous to generate markdown
+      - name: Run sha256 integration tests
+        working-directory: extensions/sha256/tests
         run: |
-          current_sha=$(git rev-parse HEAD)
-          echo "Current SHA: $current_sha"
-          echo "current_sha=${current_sha}" >> $GITHUB_ENV
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda --profile=heavy --no-tests=pass
 
-          s5cmd cp $METRIC_PATH ${{ env.S3_METRICS_PATH }}/${METRIC_NAME}-${current_sha}.json
-
-      - name: Install inferno-flamegraph
-        if: ${{ contains(env.FEATURE_FLAGS, 'perf-metrics') }}
-        run: cargo install inferno
-
-      - name: Generate flamegraphs
-        if: ${{ contains(env.FEATURE_FLAGS, 'perf-metrics') }}
+      - name: Run bigint circuit crate tests
+        working-directory: extensions/bigint/circuit
         run: |
-          if [[ -f $METRIC_PATH ]]; then
-            GUEST_SYMBOLS_PATH="${METRIC_PATH%.json}.syms"
-            if [[ -f $GUEST_SYMBOLS_PATH ]]; then
-              echo "Generating flamegraphs with guest symbols"
-              python3 ci/scripts/metric_unify/flamegraph.py $METRIC_PATH --guest-symbols $GUEST_SYMBOLS_PATH
-            else
-              echo "No guest symbols found, generating flamegraphs without symbols"
-              python3 ci/scripts/metric_unify/flamegraph.py $METRIC_PATH
-            fi
-            s5cmd cp '.bench_metrics/flamegraphs/*.svg' "${{ env.S3_FLAMEGRAPHS_PATH }}/${METRIC_NAME}-${current_sha}/"
-            echo "UPLOAD_FLAMEGRAPHS=1" >> $GITHUB_ENV
-          fi
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=32 --no-tests=pass
 
-      ##########################################################################
-      # Update s3 for latest branch metrics upon a push event                  #
-      ##########################################################################
-      - name: Update latest branch result in s3
-        if: github.event_name == 'push'
+      - name: Run bigint integration tests
+        working-directory: extensions/bigint/tests
         run: |
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # for backwards compatibility
-            REF_HASH="main"
-          else
-            REF_HASH=$(echo "${{ github.ref }}" | sha256sum | cut -d' ' -f1)
-          fi
-          s5cmd cp $METRIC_PATH "${{ env.S3_METRICS_PATH }}/${REF_HASH}-${METRIC_NAME}.json"
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda --profile=heavy --no-tests=pass
+
+      - name: Run algebra circuit crate tests
+        working-directory: extensions/algebra/circuit
+        run: |
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=4 --no-tests=pass
+
+      - name: Run ecc circuit crate tests
+        working-directory: extensions/ecc/circuit
+        run: |
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=32 --no-tests=pass
+
+      - name: Run ecc integration tests
+        working-directory: extensions/ecc/tests
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda --profile=heavy --no-tests=pass
+
+      - name: Run pairing circuit crate tests
+        working-directory: extensions/pairing/circuit
+        run: |
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda,touchemall --test-threads=32 --no-tests=pass
+
+      - name: Run pairing integration tests
+        working-directory: extensions/pairing/tests
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --cargo-profile=fast --features parallel,cuda --profile=heavy --no-tests=pass
+
+      - name: Run sha2 guest library tests
+        working-directory: guest-libs/sha2
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda --no-tests=pass --test-threads=1
+
+      - name: Run keccak256 guest library tests
+        working-directory: guest-libs/keccak256
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda --no-tests=pass --test-threads=1
+
+      - name: Run ff_derive guest library tests
+        working-directory: guest-libs/ff_derive
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda --no-tests=pass --test-threads=1
+
+      - name: Run k256 guest library tests
+        working-directory: guest-libs/k256
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda --no-tests=pass --test-threads=1
+
+      - name: Run p256 guest library tests
+        working-directory: guest-libs/p256
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda --no-tests=pass --test-threads=1
+
+      - name: Run ruint guest library tests
+        working-directory: guest-libs/ruint
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda --no-tests=pass --test-threads=1
+
+      - name: Run pairing guest library tests
+        working-directory: guest-libs/pairing
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda,bn254,bls12_381 --no-tests=pass --test-threads=1
+
+      - name: Run verify_stark guest library tests
+        working-directory: guest-libs/verify_stark
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          CUDA_OPT_LEVEL=1 cargo nextest run --cargo-profile=fast --features parallel,cuda --no-tests=pass --test-threads=1
+
+      - name: Run vm crate tests
+        working-directory: crates/vm
+        run: |
+          CUDA_OPT_LEVEL=1 cargo nextest run cuda --features parallel,cuda,touchemall
