--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -7,11 +7,11 @@ on:
         type: string
         required: true
         description: The name of the benchmark to run
-      runner:
+      instance_type:
         type: string
         required: false
-        description: Runner config as JSON, use bench-gpu-nvidia for GPU
-        default: test-64cpu-arm64
+        description: The AWS instance type or family (e.g., m7g.16xlarge)
+        default: g6.2xlarge
       memory_allocator:
         type: string
         required: false
@@ -60,11 +60,11 @@ on:
         type: string
         required: true
         description: The id of the benchmark to run, must be unique within matrix
-      runner:
+      instance_type:
         type: string
         required: false
-        description: Runner config as JSON, use bench-gpu-nvidia for GPU
-        default: test-64cpu-arm64
+        description: The AWS instance type or family (e.g., m7g.16xlarge)
+        default: g6.2xlarge
       memory_allocator:
         type: string
         required: false
@@ -119,8 +119,9 @@ jobs:
     name: Run benchmark on workflow ref/branch
     runs-on:
       - runs-on
-      - runner=${{ inputs.runner }}
       - run-id=${{ github.run_id }}
+      - family=${{ inputs.instance_type }}
+      - image=${{ startsWith(inputs.instance_type, 'g') && 'ubuntu24-gpu-x64' || contains(inputs.instance_type, 'g.') && 'ubuntu24-full-arm64' || 'ubuntu24-full-x64' }}
       - tag=bench-${{ inputs.benchmark_name }}-${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
       - extras=s3-cache
     steps:
