--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -36,7 +36,8 @@ jobs:
     runs-on:
       - runs-on=${{ github.run_id }}
       - disk=large
-      - runner=test-64cpu-arm64
+      - runner=64cpu-linux-arm64
+      - image=ubuntu24-full-arm64
       - extras=s3-cache
 
     steps:
