--- a/.github/workflows/native-compiler.yml
+++ b/.github/workflows/native-compiler.yml
@@ -24,7 +24,8 @@ jobs:
   tests:
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=test-64cpu-arm64
+      - runner=64cpu-linux-arm64
+      - image=ubuntu24-full-arm64
       - extras=s3-cache
 
     steps:
