--- a/.github/workflows/vm.yml
+++ b/.github/workflows/vm.yml
@@ -8,7 +8,6 @@ on:
     paths:
       - "crates/circuits/**"
       - "crates/vm/**"
-      - "extensions/native/**"
       - "Cargo.toml"
       - ".github/workflows/vm.yml"
 
@@ -25,12 +24,13 @@ jobs:
     strategy:
       matrix:
         platform:
-          - { runner: "test-64cpu-arm64" }
-          # - { runner: "test-gpu-nvidia" }
+          - { runner: "64cpu-linux-arm64", image: "ubuntu24-full-arm64" }
+          - { runner: "test-gpu-nvidia", image: "ubuntu24-gpu-x64" }
 
     runs-on:
-      - runs-on=${{ github.run_id }}
+      - runs-on=${{ github.run_id }}-vm-tests-${{ github.run_attempt }}-${{ strategy.job-index }}
       - runner=${{ matrix.platform.runner }}
+      - image=${{ matrix.platform.image }}
       - extras=s3-cache
 
     steps:
