--- a/ci/benchmark-config.json
+++ b/ci/benchmark-config.json
@@ -7,8 +7,7 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "cpu_runner": "test-64cpu-arm64",
-          "gpu_runner": "bench-gpu-nvidia",
+          "instance_type": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -22,8 +21,7 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "cpu_runner": "test-64cpu-arm64",
-          "gpu_runner": "bench-gpu-nvidia",
+          "instance_type": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -37,8 +35,7 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "cpu_runner": "test-64cpu-arm64",
-          "gpu_runner": "bench-gpu-nvidia",
+          "instance_type": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -52,8 +49,7 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "cpu_runner": "test-64cpu-arm64",
-          "gpu_runner": "bench-gpu-nvidia",
+          "instance_type": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -67,8 +63,7 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "cpu_runner": "test-64cpu-arm64",
-          "gpu_runner": "bench-gpu-nvidia",
+          "instance_type": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -82,8 +77,7 @@
       "e2e_bench": true,
       "run_params": [
         {
-          "cpu_runner": "test-64cpu-arm64",
-          "gpu_runner": "bench-gpu-nvidia",
+          "instance_type": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1,
@@ -100,8 +94,7 @@
       "e2e_bench": true,
       "run_params": [
         {
-          "cpu_runner": "test-64cpu-arm64",
-          "gpu_runner": "bench-gpu-nvidia-big",
+          "instance_type": "g6e.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1,
