--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -7,6 +7,7 @@ on:
         type: string
         required: true
         description: The name of the benchmark to run
+        default: "fibonacci"
 
 env:
   # S3_METRICS_PATH: s3://openvm-public-data-sandbox-us-east-1/benchmark/github/metrics
