--- a/extensions/native/circuit/Cargo.toml
+++ b/extensions/native/circuit/Cargo.toml
@@ -50,4 +50,17 @@ test-log = { workspace = true }
 default = ["parallel"]
 parallel = ["openvm-circuit/parallel"]
 test-utils = ["openvm-circuit/test-utils"]
-cuda = ["dep:openvm-cuda-backend", "dep:openvm-cuda-common", "dep:openvm-cuda-builder", "openvm-circuit-primitives/cuda", "openvm-circuit/cuda"]
+cuda = [
+    "dep:openvm-cuda-backend",
+    "dep:openvm-cuda-common",
+    "dep:openvm-cuda-builder",
+    "openvm-circuit-primitives/cuda",
+    "openvm-circuit/cuda"
+]
+touchemall = [
+    "cuda", 
+    "openvm-circuit/touchemall",
+    "openvm-circuit-primitives/touchemall",
+    "openvm-cuda-backend/touchemall",
+    "openvm-cuda-common/touchemall",
+]
