--- a/extensions/rv32im/circuit/Cargo.toml
+++ b/extensions/rv32im/circuit/Cargo.toml
@@ -55,3 +55,10 @@ cuda = [
     "openvm-circuit-primitives/cuda",
     "openvm-circuit/cuda"
 ]
+touchemall = [
+    "cuda", 
+    "openvm-circuit/touchemall",
+    "openvm-circuit-primitives/touchemall",
+    "openvm-cuda-backend/touchemall",
+    "openvm-cuda-common/touchemall",
+]
