--- a/.github/workflows/primitives.yml
+++ b/.github/workflows/primitives.yml
@@ -26,12 +26,13 @@ jobs:
     strategy:
       matrix:
         platform:
-          - { runner: "test-64cpu-arm64" }
-          # - { runner: "test-gpu-nvidia" }
+          - { runner: "64cpu-linux-arm64", image: "ubuntu24-full-arm64" }
+          - { runner: "test-gpu-nvidia", image: "ubuntu24-gpu-x64" }
 
     runs-on:
-      - runs-on=${{ github.run_id }}
+      - runs-on=${{ github.run_id }}-primitives-${{ github.run_attempt }}-${{ strategy.job-index }}
       - runner=${{ matrix.platform.runner }}
+      - image=${{ matrix.platform.image }}
       - extras=s3-cache
 
     steps:
