--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -38,10 +38,10 @@ jobs:
         working-directory: guest-libs/ruint
         run: |
           rustup component add rust-src --toolchain nightly-2025-02-14
-          CUDA_OPT_LEVEL=3 cargo nextest run --features parallel,cuda --no-tests=pass --test-threads=1
+          CUDA_OPT_LEVEL=3 cargo nextest run --features cuda --no-tests=pass --test-threads=1
 
       - name: Run pairing guest library tests
         working-directory: guest-libs/pairing
         run: |
           rustup component add rust-src --toolchain nightly-2025-02-14
-          CUDA_OPT_LEVEL=3 cargo nextest run --features parallel,cuda,bn254,bls12_381 --no-tests=pass --test-threads=1
+          CUDA_OPT_LEVEL=3 cargo nextest run --features cuda,bn254,bls12_381 --no-tests=pass --test-threads=1
