--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -145,11 +145,14 @@ jobs:
 
       - name: Display workflow inputs
         run: echo "${{ toJSON(inputs) }}"
-      - name: "Feature flags: memory allocator"
+      - name: "Feature flags: memory allocator + e2e"
         run: |
           ALLOCATOR=${{ inputs.memory_allocator || github.event.inputs.memory_allocator }}
           if [[ ! "${{ inputs.instance_type || github.event.inputs.instance_type }}" =~ ^g ]]; then
-            "FEATURE_FLAGS=${FEATURE_FLAGS},nightly-features" >> $GITHUB_ENV
+            echo "FEATURE_FLAGS=${FEATURE_FLAGS},nightly-features" >> $GITHUB_ENV
+            if [[ "${{ inputs.e2e_bench }}" == "true" ]]; then
+              echo "FEATURE_FLAGS=${FEATURE_FLAGS},evm" >> $GITHUB_ENV
+            fi
           fi
           echo "FEATURE_FLAGS=$ALLOCATOR,${FEATURE_FLAGS}" >> $GITHUB_ENV
       - name: "Feature flags: aggregation"
