--- a/extensions/algebra/circuit/Cargo.toml
+++ b/extensions/algebra/circuit/Cargo.toml
@@ -32,6 +32,7 @@ derive-new = { workspace = true }
 serde.workspace = true
 serde_with = { workspace = true }
 eyre = { workspace = true }
+cfg-if = { workspace = true }
 
 [dev-dependencies]
 openvm-mod-circuit-builder = { workspace = true, features = ["test-utils"] }
