chore: use default CUDA_OPT_LEVEL everywhere (i.e. 3)

--- a/.github/workflows/guest-lib-tests.yml
+++ b/.github/workflows/guest-lib-tests.yml
@@ -135,7 +135,7 @@ jobs:
       - uses: taiki-e/install-action@nextest
 
       - name: Check CUDA status and set environment variables
-        if: contains(matrix.config.family, 'gpu')
+        if: contains(matrix.config.image, 'gpu')
         run: |
           nvcc --version
           echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
