--- a/.github/workflows/primitives.yml
+++ b/.github/workflows/primitives.yml
@@ -47,36 +47,33 @@ jobs:
       - name: Set CPU tests environment variables
         if: ${{ !contains(matrix.platform.runner, 'gpu') }}
         run: |
-          echo "NEXTEST_ENV=" >> $GITHUB_ENV
           echo "NEXTEST_ARGS=--cargo-profile fast --features parallel" >> $GITHUB_ENV
 
       - name: Check CUDA status and set environment variables
         if: contains(matrix.platform.runner, 'gpu')
         run: |
           nvcc --version
-
-          echo "NEXTEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
           echo "NEXTEST_ARGS=cuda --features parallel,cuda,touchemall" >> $GITHUB_ENV
 
       - name: Run tests for primitives
         working-directory: crates/circuits/primitives
         run: |
-          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
+          cargo nextest run ${{ env.NEXTEST_ARGS }}
 
       - name: Run tests for poseidon2-air
         working-directory: crates/circuits/poseidon2-air
         run: |
-          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
+          cargo nextest run ${{ env.NEXTEST_ARGS }}
 
         # No gpu tests in these crates
       - name: Run tests for sha256-air
         if: ${{ !contains(matrix.platform.runner, 'gpu') }}
         working-directory: crates/circuits/sha256-air
         run: |
-          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
+          cargo nextest run ${{ env.NEXTEST_ARGS }}
 
       - name: Run tests for mod-builder
         if: ${{ !contains(matrix.platform.runner, 'gpu') }}
         working-directory: crates/circuits/mod-builder
         run: |
-          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
+          cargo nextest run ${{ env.NEXTEST_ARGS }}
