--- a/.github/workflows/riscv.yml
+++ b/.github/workflows/riscv.yml
@@ -53,9 +53,7 @@ jobs:
         if: contains(matrix.platform.runner, 'gpu')
         run: |
           nvcc --version
-
           echo "FEATURE_ARGS=--features=cuda,touchemall" >> $GITHUB_ENV
-          echo "CIRCUIT_TEST_ENV=CUDA_OPT_LEVEL=3" >> $GITHUB_ENV
 
       - name: Download and install risc64-elf-gcc
         if: contains(matrix.platform.image, 'x64')
@@ -86,4 +84,4 @@ jobs:
           else
             TEST_NAME=test_rv32im_riscv_vector_runtime
           fi
-          ${{ env.CIRCUIT_TEST_ENV }} cargo nextest run ${{ env.FEATURE_ARGS }} --cargo-profile=fast --run-ignored only --no-capture -- $TEST_NAME
+          cargo nextest run ${{ env.FEATURE_ARGS }} --cargo-profile=fast --run-ignored only --no-capture -- $TEST_NAME
