--- a/.github/workflows/vm.yml
+++ b/.github/workflows/vm.yml
@@ -45,20 +45,18 @@ jobs:
       - name: Set CPU tests environment variables
         if: ${{ !contains(matrix.platform.runner, 'gpu') }}
         run: |
-          echo "NEXTEST_ENV=" >> $GITHUB_ENV
           echo "NEXTEST_ARGS=--cargo-profile fast --features parallel" >> $GITHUB_ENV
 
       - name: Check CUDA status and set environment variables
         if: contains(matrix.platform.runner, 'gpu')
         run: |
           nvcc --version
-          echo "NEXTEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
           echo "NEXTEST_ARGS=cuda --features parallel,cuda,touchemall" >> $GITHUB_ENV
 
       - name: Run vm crate tests
         working-directory: crates/vm
         run: |
-          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
+          cargo nextest run ${{ env.NEXTEST_ARGS }}
 
       - name: Run vm crate tests with basic memory
         if: ${{ !contains(matrix.platform.runner, 'gpu') }}
