--- a/.github/workflows/guest-lib-tests.yml
+++ b/.github/workflows/guest-lib-tests.yml
@@ -33,8 +33,8 @@ jobs:
           - { name: "ff_derive", path: "ff_derive" }
           - { name: "k256", path: "k256" }
           - { name: "p256", path: "p256" }
-          - { name: "ruint", path: "ruint" }
-          - { name: "pairing", path: "pairing" }
+          # - { name: "ruint", path: "ruint" }
+          # - { name: "pairing", path: "pairing" }
           - { name: "verify_stark", path: "verify_stark" }
         platform:
           - { runner: "64cpu-linux-arm64", image: "ubuntu24-full-arm64" }
@@ -86,6 +86,66 @@ jobs:
           rustup component add rust-src --toolchain nightly-2025-02-14
           PAIRING_FEATURE_ARGS=""
           if [[ "${{ matrix.crate.name }}" == "pairing" ]]; then
+            PAIRING_FEATURE_ARGS="--features=bn254,bls12_381"
+          fi
+          cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} $PAIRING_FEATURE_ARGS --no-tests=pass --test-threads=1
+
+  # TEMP: Special tests for certain configuration, will add special GPU runners later
+  special-integration-tests:
+    strategy:
+      matrix:
+        config:
+          - { name: "ruint", path: "ruint", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "ruint", path: "ruint", family: "g6.2xlarge", image: "ubuntu24-gpu-x64" }
+          - { name: "pairing", path: "pairing", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "pairing", path: "pairing", family: "g6e.xlarge", image: "ubuntu24-gpu-x64" }
+      # Ensure tests run in parallel even if one fails
+      fail-fast: false
+
+    runs-on:
+      - runs-on=${{ github.run_id }}-guest-lib-tests-${{ github.run_attempt }}-${{ strategy.job-index }}
+      - family=${{ matrix.config.family }}
+      - image=${{ matrix.config.image }}
+      - tag=guest-lib-${{ matrix.config.name }}-${{ matrix.config.family }}
+      - extras=s3-cache
+
+    steps:
+      - uses: runs-on/action@v1
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            - "crates/circuits/**"
+            - "crates/vm/**"
+            - "crates/toolchain/**"
+            - "extensions/**"
+            - "guest-libs/${{ matrix.crate.path }}/**"
+            - ".github/workflows/guest-lib-tests.yml"
+      - name: Skip if no changes
+        if: steps.filter.outputs.matched == 'false'
+        run: |
+          echo "No relevant changes, skipping tests."
+          exit 0
+
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          cache-on-failure: true
+      - uses: taiki-e/install-action@nextest
+
+      - name: Check CUDA status and set environment variables
+        if: contains(matrix.config.image, 'gpu')
+        run: |
+          nvcc --version
+          echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
+
+      - name: Run ${{ matrix.config.name }} guest library tests
+        working-directory: guest-libs/${{ matrix.config.path }}
+        run: |
+          rustup component add rust-src --toolchain nightly-2025-02-14
+          PAIRING_FEATURE_ARGS=""
+          if [[ "${{ matrix.config.name }}" == "pairing" ]]; then
             PAIRING_FEATURE_ARGS="--features=bn254,bls12_381"
           fi
           cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} $PAIRING_FEATURE_ARGS --no-tests=pass --test-threads=1
