--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -39,6 +39,7 @@ derivative.workspace = true
 static_assertions.workspace = true
 getset.workspace = true
 dashmap.workspace = true
+cfg-if.workspace = true
 
 [build-dependencies]
 openvm-cuda-builder = { workspace = true, optional = true }
