--- a/benchmarks/prove/Cargo.toml
+++ b/benchmarks/prove/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 
 [dependencies]
 openvm-benchmarks-utils.workspace = true
-openvm-circuit.workspace = true
+openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-continuations.workspace = true
 openvm-sdk.workspace = true
 openvm-stark-backend.workspace = true
