chore(cuda): cpu gpu types cleanup (#2041)
Closes INT-4844

- [x] extensions 
- [x] sdk
- [x] benchmarks 
- [x] guest-libs

---------

Co-authored-by: Jonathan Wang <31040440+jonathanpwang@users.noreply.github.com>

--- a/benchmarks/prove/Cargo.toml
+++ b/benchmarks/prove/Cargo.toml
@@ -9,12 +9,11 @@ license.workspace = true
 
 [dependencies]
 openvm-benchmarks-utils.workspace = true
-openvm-circuit.workspace = true
+openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-continuations.workspace = true
 openvm-sdk.workspace = true
 openvm-stark-backend.workspace = true
 openvm-stark-sdk.workspace = true
-openvm-cuda-backend = { workspace = true, optional = true }
 openvm-transpiler.workspace = true
 openvm-native-circuit.workspace = true
 openvm-native-compiler.workspace = true
@@ -48,7 +47,6 @@ jemalloc-prof = ["openvm-sdk/jemalloc-prof"]
 nightly-features = ["openvm-sdk/nightly-features"]
 
 cuda = [
-    "dep:openvm-cuda-backend",
     "openvm-circuit/cuda",
     "openvm-native-circuit/cuda",
     "openvm-sdk/cuda",
