--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -121,6 +121,7 @@ jobs:
       - runs-on=${{ github.run_id }}
       - family=${{ github.event.inputs.instance_type || inputs.instance_type }}
       - image=${{ startsWith(github.event.inputs.instance_type || inputs.instance_type, 'g') && 'ubuntu24-gpu-x64' || contains(github.event.inputs.instance_type || inputs.instance_type, 'g.') && 'ubuntu24-full-arm64' || 'ubuntu24-full-x64' }}
+      - spot=${{ startsWith(github.event.inputs.instance_type || inputs.instance_type, 'g') && 'false' || 'capacity-optimized' }}
       - tag=bench-${{ github.event.inputs.benchmark_name || inputs.benchmark_name }}-${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
       - extras=s3-cache
     steps:
